# Brickjoon

./: .gitignore  Brickjoon.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipelines.yml  build.bat  test1.cpp
Brickjoon_Src/: 1000.cc  1001.cc  10039.cc  1004.cpp  1008.cc  10102.cpp  1015.cpp  10162.cc  10170.cc  10171.cc  10178.cc  10214.cpp  10250.cpp  1041.c  10430.cc  10610.cpp  10707.cpp  10718.cc  1074.cpp  10757.cpp  10773.cpp  10797.cc  10798.cpp  10809.cc  10815.c  10818.cc  10820.cpp  10826.cc  10828.cpp  10830.c  10833.cc  10845.c  10845.cpp  10866.cpp  10867.cpp  10869.cc  10871.cc  10872.cpp  10951.cc  10974.cpp  (+335 more)
Brickjoon_Src/.cph/: .1041.c_35afedfea378f35f11fbb5f4b001673c.prob  .10845.c_e852b4256380be8b2963d3c6eefe52b2.prob  .11004.c_20073ea4027994b7316ec0e89d949f1c.prob  .11279.c_8406020649fab7b4ad9c0c27274e9838.prob  .11689.c_d43ae2af891a1e46e242b021eea2dea5.prob  .14002.c_8343c3887365ba61e8010074d170a636.prob  .14284.c_689926f8a3a750ca8d7c288ac65ead86.prob  .14502.c_be9fb433369f70f48b0502547914ce29.prob  .17114.c_5d7a6615cd3409a50099804cde198ca6.prob  .1753.c_595150875ce39113c673ba4936537f22.prob  .17836.c_52abae6cf8cd754542087127073a0c90.prob  .1927.c_dcb9f5d6d1982878dd9b42a506358e46.prob  .30894.c_a4225f83720ca2f649393d0808baf7f1.prob  .3944.c_f8c3c74e2f53e52c58963073a039efc6.prob  .4563.c_77d85d3502501781036387f16ce7bf57.prob
Brickjoon_Src/1000/: CMakeLists.txt
Brickjoon_Src/1001/: CMakeLists.txt
Brickjoon_Src/1002/: CMakeLists.txt
Brickjoon_Src/1003/: CMakeLists.txt
Brickjoon_Src/10039/: CMakeLists.txt
Brickjoon_Src/1004/: CMakeLists.txt
Brickjoon_Src/1008/: CMakeLists.txt
Brickjoon_Src/1009/: CMakeLists.txt
Brickjoon_Src/10093/: CMakeLists.txt
Brickjoon_Src/1010/: CMakeLists.txt
Brickjoon_Src/10101/: CMakeLists.txt
Brickjoon_Src/10102/: CMakeLists.txt
Brickjoon_Src/10103/: 10103.cpp  CMakeLists.txt
Brickjoon_Src/1011/: 1011.cpp  CMakeLists.txt
Brickjoon_Src/1012/: 1012.cpp  CMakeLists.txt
Brickjoon_Src/10156/: 10156.cpp  CMakeLists.txt
Brickjoon_Src/10162/: CMakeLists.txt
Brickjoon_Src/10170/: CMakeLists.txt
Brickjoon_Src/10171/: CMakeLists.txt
Brickjoon_Src/10172/: 10172.cc  CMakeLists.txt
Brickjoon_Src/10178/: CMakeLists.txt
Brickjoon_Src/1018/: CMakeLists.txt
Brickjoon_Src/10214/: CMakeLists.txt
Brickjoon_Src/10250/: CMakeLists.txt
Brickjoon_Src/1026/: CMakeLists.txt
Brickjoon_Src/1032/: CMakeLists.txt
Brickjoon_Src/1037/: CMakeLists.txt
Brickjoon_Src/10430/: CMakeLists.txt
Brickjoon_Src/1049/: CMakeLists.txt
Brickjoon_Src/10569/: 10569.cpp  CMakeLists.txt
Brickjoon_Src/10610/: CMakeLists.txt
Brickjoon_Src/1065/: CMakeLists.txt
Brickjoon_Src/10699/: CMakeLists.txt
Brickjoon_Src/10707/: CMakeLists.txt
Brickjoon_Src/10718/: CMakeLists.txt
Brickjoon_Src/1074/: CMakeLists.txt
Brickjoon_Src/10757/: CMakeLists.txt
Brickjoon_Src/10768/: CMakeLists.txt
Brickjoon_Src/10773/: CMakeLists.txt
Brickjoon_Src/10797/: CMakeLists.txt
Brickjoon_Src/10798/: CMakeLists.txt
Brickjoon_Src/10799/: 10799.cpp  CMakeLists.txt
Brickjoon_Src/10807/: CMakeLists.txt
Brickjoon_Src/10808/: CMakeLists.txt
Brickjoon_Src/10809/: CMakeLists.txt
Brickjoon_Src/10814/: CMakeLists.txt
Brickjoon_Src/10815/: CMakeLists.txt
Brickjoon_Src/10816/: CMakeLists.txt
Brickjoon_Src/10817/: CMakeLists.txt
Brickjoon_Src/10818/: CMakeLists.txt
Brickjoon_Src/10820/: CMakeLists.txt
Brickjoon_Src/10822/: 10822.cc  CMakeLists.txt
Brickjoon_Src/10824/: CMakeLists.txt
Brickjoon_Src/10826/: CMakeLists.txt
Brickjoon_Src/10828/: CMakeLists.txt
Brickjoon_Src/10833/: CMakeLists.txt
Brickjoon_Src/10845/: CMakeLists.txt
Brickjoon_Src/1085/: CMakeLists.txt
Brickjoon_Src/10866/: CMakeLists.txt
Brickjoon_Src/10867/: CMakeLists.txt
Brickjoon_Src/10869/: CMakeLists.txt
Brickjoon_Src/10870/: CMakeLists.txt
Brickjoon_Src/10871/: CMakeLists.txt
Brickjoon_Src/10872/: CMakeLists.txt
Brickjoon_Src/10886/: CMakeLists.txt
Brickjoon_Src/10926/: 10926.cpp  CMakeLists.txt
Brickjoon_Src/10950/: 10950.cc  CMakeLists.txt
Brickjoon_Src/10951/: CMakeLists.txt
Brickjoon_Src/10952/: 10952.cc  CMakeLists.txt
Brickjoon_Src/10953/: 10953.cpp  CMakeLists.txt
Brickjoon_Src/10974/: CMakeLists.txt
Brickjoon_Src/10984/: CMakeLists.txt
Brickjoon_Src/10987/: CMakeLists.txt
Brickjoon_Src/10988/: CMakeLists.txt
Brickjoon_Src/10989/: CMakeLists.txt
Brickjoon_Src/10990/: CMakeLists.txt
Brickjoon_Src/10991/: CMakeLists.txt
Brickjoon_Src/10995/: CMakeLists.txt
Brickjoon_Src/10998/: 10998.cc  CMakeLists.txt
Brickjoon_Src/1100/: CMakeLists.txt
Brickjoon_Src/11021/: CMakeLists.txt
Brickjoon_Src/11022/: CMakeLists.txt
Brickjoon_Src/11034/: CMakeLists.txt
Brickjoon_Src/11047/: 11047.cpp  CMakeLists.txt
Brickjoon_Src/11050/: 11050.cpp  CMakeLists.txt
Brickjoon_Src/11098/: CMakeLists.txt
Brickjoon_Src/1110/: CMakeLists.txt
Brickjoon_Src/1120/: CMakeLists.txt
Brickjoon_Src/11279/: CMakeLists.txt
Brickjoon_Src/11286/: CMakeLists.txt
Brickjoon_Src/11288/: 11288.cpp  CMakeLists.txt
Brickjoon_Src/11365/: 11365.cc  CMakeLists.txt
Brickjoon_Src/11382/: 11382.cc  CMakeLists.txt
Brickjoon_Src/11399/: CMakeLists.txt
Brickjoon_Src/1149/: 1149.cpp  CMakeLists.txt
Brickjoon_Src/1152/: CMakeLists.txt
Brickjoon_Src/11557/: CMakeLists.txt
Brickjoon_Src/1157/: 1157.cc  CMakeLists.txt
Brickjoon_Src/1158/: CMakeLists.txt
Brickjoon_Src/11582/: CMakeLists.txt
Brickjoon_Src/11650/: CMakeLists.txt
Brickjoon_Src/11651/: CMakeLists.txt
Brickjoon_Src/11653/: CMakeLists.txt
Brickjoon_Src/11654/: CMakeLists.txt
Brickjoon_Src/11655/: CMakeLists.txt
Brickjoon_Src/11656/: CMakeLists.txt
Brickjoon_Src/11659/: 11659.cpp  CMakeLists.txt
Brickjoon_Src/11718/: CMakeLists.txt
Brickjoon_Src/11719/: CMakeLists.txt
Brickjoon_Src/11720/: CMakeLists.txt
Brickjoon_Src/11721/: CMakeLists.txt
Brickjoon_Src/11723/: CMakeLists.txt
Brickjoon_Src/11724/: CMakeLists.txt
Brickjoon_Src/11726/: CMakeLists.txt
Brickjoon_Src/11942/: 11942.cc  (+1 more)
Codeforces_Src/: CMakeLists.txt
(+764 files in other folders)
