#project name 
project(brickjoon_source)

add_subdirectory(1000)
add_subdirectory(1001)
add_subdirectory(1002)
add_subdirectory(1003)
add_subdirectory(10039)
add_subdirectory(1004)
add_subdirectory(1008)
add_subdirectory(1009)
add_subdirectory(10093)
add_subdirectory(1010)
add_subdirectory(10101)
add_subdirectory(10102)
add_subdirectory(10103)
add_subdirectory(1011)
add_subdirectory(1012)
add_subdirectory(10156)
add_subdirectory(10162)
add_subdirectory(10170)
add_subdirectory(10171)
add_subdirectory(10172)
add_subdirectory(10178)
add_subdirectory(1018)
add_subdirectory(10214)
add_subdirectory(10250)
add_subdirectory(1026)
add_subdirectory(1032)
add_subdirectory(1037)
add_subdirectory(10430)
add_subdirectory(1049)
add_subdirectory(10569)
add_subdirectory(10610)
add_subdirectory(1065)
add_subdirectory(10699)
add_subdirectory(10707)
add_subdirectory(10718)
add_subdirectory(1074)
add_subdirectory(10757)
add_subdirectory(10768)
add_subdirectory(10773)
add_subdirectory(10797)
add_subdirectory(10798)
add_subdirectory(10799)
add_subdirectory(10807)
add_subdirectory(10808)
add_subdirectory(10809)
add_subdirectory(10814)
add_subdirectory(10815)
add_subdirectory(10816)
add_subdirectory(10817)
add_subdirectory(10818)
add_subdirectory(10820)
add_subdirectory(10822)
add_subdirectory(10824)
add_subdirectory(10826)
add_subdirectory(10828)
add_subdirectory(10833)
add_subdirectory(10845)
add_subdirectory(1085)
add_subdirectory(10866)
add_subdirectory(10867)
add_subdirectory(10869)
add_subdirectory(10870)
add_subdirectory(10871)
add_subdirectory(10872)
add_subdirectory(10886)
add_subdirectory(10926)
add_subdirectory(10950)
add_subdirectory(10951)
add_subdirectory(10952)
add_subdirectory(10953)
add_subdirectory(10974)
add_subdirectory(10984)
add_subdirectory(10987)
add_subdirectory(10988)
add_subdirectory(10989)
add_subdirectory(10990)
add_subdirectory(10991)
add_subdirectory(10995)
add_subdirectory(10998)
add_subdirectory(1100)
add_subdirectory(11021)
add_subdirectory(11022)
add_subdirectory(11034)
add_subdirectory(11047)
add_subdirectory(11050)
add_subdirectory(11098)
add_subdirectory(1110)
add_subdirectory(1120)
add_subdirectory(11279)
add_subdirectory(11286)
add_subdirectory(11288)
add_subdirectory(11365)
add_subdirectory(11382)
add_subdirectory(11399)
add_subdirectory(1149)
add_subdirectory(1152)
add_subdirectory(11557)
add_subdirectory(1157)
add_subdirectory(1158)
add_subdirectory(11582)
add_subdirectory(11650)
add_subdirectory(11651)
add_subdirectory(11653)
add_subdirectory(11654)
add_subdirectory(11655)
add_subdirectory(11656)
add_subdirectory(11659)
add_subdirectory(11718)
add_subdirectory(11719)
add_subdirectory(11720)
add_subdirectory(11721)
add_subdirectory(11723)
add_subdirectory(11724)
add_subdirectory(11726)
add_subdirectory(11727)
add_subdirectory(11728)
add_subdirectory(11729)
add_subdirectory(1181)
add_subdirectory(11866)
add_subdirectory(1193)
add_subdirectory(11931)
add_subdirectory(11942)
add_subdirectory(11943)
add_subdirectory(11944)
add_subdirectory(11945)
add_subdirectory(11948)
add_subdirectory(11966)
add_subdirectory(1212)
add_subdirectory(1246)
add_subdirectory(1259)
add_subdirectory(1260)
add_subdirectory(12605)
add_subdirectory(1264)
add_subdirectory(1267)
add_subdirectory(1292)
add_subdirectory(1297)
add_subdirectory(1302)
add_subdirectory(1316)
add_subdirectory(13241)
add_subdirectory(1330)
add_subdirectory(13301)
add_subdirectory(13305)
add_subdirectory(1334)
add_subdirectory(13413)
add_subdirectory(1357)
add_subdirectory(1373)
add_subdirectory(13752)
add_subdirectory(1408)
add_subdirectory(1417)
add_subdirectory(1422)
add_subdirectory(14247)
add_subdirectory(14264)
add_subdirectory(1427)
add_subdirectory(1436)
add_subdirectory(1439)
add_subdirectory(1440)
add_subdirectory(14425)
add_subdirectory(14469)
add_subdirectory(14470)
add_subdirectory(14489)
add_subdirectory(14606)
add_subdirectory(1463)
add_subdirectory(14645)
add_subdirectory(14652)
add_subdirectory(14655)
add_subdirectory(14659)
add_subdirectory(14681)
add_subdirectory(1476)
add_subdirectory(14916)
add_subdirectory(14928)
add_subdirectory(15312)
add_subdirectory(15353)
add_subdirectory(15372)
add_subdirectory(1541)
add_subdirectory(15439)
add_subdirectory(1546)
add_subdirectory(1550)
add_subdirectory(15552)
add_subdirectory(15596)
add_subdirectory(15649)
add_subdirectory(15650)
add_subdirectory(15651)
add_subdirectory(15652)
add_subdirectory(15654)
add_subdirectory(15655)
add_subdirectory(15656)
add_subdirectory(15657)
add_subdirectory(15680)
add_subdirectory(15720)
add_subdirectory(15726)
add_subdirectory(15727)
add_subdirectory(15733)
add_subdirectory(15740)
add_subdirectory(15792)
add_subdirectory(15813)
add_subdirectory(15829)
add_subdirectory(15873)
add_subdirectory(15894)
add_subdirectory(15904)
add_subdirectory(15917)
add_subdirectory(15962)
add_subdirectory(15963)
add_subdirectory(15964)
add_subdirectory(15988)
add_subdirectory(16170)
add_subdirectory(1620)
add_subdirectory(1629)
add_subdirectory(16394)
add_subdirectory(16430)
add_subdirectory(16486)
add_subdirectory(16496)
add_subdirectory(1654)
add_subdirectory(1655)
add_subdirectory(16561)
add_subdirectory(1676)
add_subdirectory(1697)
add_subdirectory(1712)
add_subdirectory(1715)
add_subdirectory(17202)
add_subdirectory(17224)
add_subdirectory(17249)
add_subdirectory(17256)
add_subdirectory(17295)
add_subdirectory(17362)
add_subdirectory(17388)
add_subdirectory(17496)
add_subdirectory(17608)
add_subdirectory(1764)
add_subdirectory(1789)
add_subdirectory(18096)
add_subdirectory(18108)
add_subdirectory(18111)
add_subdirectory(1822)
add_subdirectory(18221)
add_subdirectory(18258)
add_subdirectory(18301)
add_subdirectory(18408)
add_subdirectory(1874)
add_subdirectory(18870)
add_subdirectory(18917)
add_subdirectory(1920)
add_subdirectory(1924)
add_subdirectory(1927)
add_subdirectory(1929)
add_subdirectory(1931)
add_subdirectory(1934)
add_subdirectory(1946)
add_subdirectory(1966)
add_subdirectory(1977)
add_subdirectory(1978)
add_subdirectory(19944)
add_subdirectory(2010)
add_subdirectory(20254)
add_subdirectory(20301)
add_subdirectory(20492)
add_subdirectory(20499)
add_subdirectory(2108)
add_subdirectory(21300)
add_subdirectory(2154)
add_subdirectory(2161)
add_subdirectory(2163)
add_subdirectory(2164)
add_subdirectory(2178)
add_subdirectory(21964)
add_subdirectory(22015)
add_subdirectory(2217)
add_subdirectory(2231)
add_subdirectory(2292)
add_subdirectory(22966)
add_subdirectory(23037)
add_subdirectory(2309)
add_subdirectory(23234)
add_subdirectory(23253)
add_subdirectory(2355)
add_subdirectory(23738)
add_subdirectory(23795)
add_subdirectory(23825)
add_subdirectory(24039)
add_subdirectory(24075)
add_subdirectory(24078)
add_subdirectory(24082)
add_subdirectory(24083)
add_subdirectory(24086)
add_subdirectory(2417)
add_subdirectory(2420)
add_subdirectory(24262)
add_subdirectory(24263)
add_subdirectory(24264)
add_subdirectory(24265)
add_subdirectory(24266)
add_subdirectory(24267)
add_subdirectory(24365)
add_subdirectory(2438)
add_subdirectory(2439)
add_subdirectory(2440)
add_subdirectory(2441)
add_subdirectory(24416)
add_subdirectory(2442)
add_subdirectory(2443)
add_subdirectory(2444)
add_subdirectory(2445)
add_subdirectory(2446)
add_subdirectory(2447)
add_subdirectory(24498)
add_subdirectory(24509)
add_subdirectory(24510)
add_subdirectory(2455)
add_subdirectory(24568)
add_subdirectory(2460)
add_subdirectory(24736)
add_subdirectory(2475)
add_subdirectory(2476)
add_subdirectory(2480)
add_subdirectory(24860)
add_subdirectory(24883)
add_subdirectory(2490)
add_subdirectory(24900)
add_subdirectory(2491)
add_subdirectory(2501)
add_subdirectory(2506)
add_subdirectory(25083)
add_subdirectory(2522)
add_subdirectory(2523)
add_subdirectory(25238)
add_subdirectory(2525)
add_subdirectory(2530)
add_subdirectory(25304)
add_subdirectory(25311)
add_subdirectory(25314)
add_subdirectory(25372)
add_subdirectory(2557)
add_subdirectory(2558)
add_subdirectory(2562)
add_subdirectory(25628)
add_subdirectory(2566)
add_subdirectory(25703)
add_subdirectory(2576)
add_subdirectory(2577)
add_subdirectory(2579)
add_subdirectory(2581)
add_subdirectory(2587)
add_subdirectory(2588)
add_subdirectory(2592)
add_subdirectory(2605)
add_subdirectory(2606)
add_subdirectory(2607)
add_subdirectory(2609)
add_subdirectory(2630)
add_subdirectory(2667)
add_subdirectory(2675)
add_subdirectory(2693)
add_subdirectory(2696)
add_subdirectory(2711)
add_subdirectory(2720)
add_subdirectory(2738)
add_subdirectory(2739)
add_subdirectory(2741)
add_subdirectory(2742)
add_subdirectory(2743)
add_subdirectory(2744)
add_subdirectory(2747)
add_subdirectory(2748)
add_subdirectory(2749)
add_subdirectory(2750)
add_subdirectory(2751)
add_subdirectory(2752)
add_subdirectory(2753)
add_subdirectory(2754)
add_subdirectory(2775)
add_subdirectory(2798)
add_subdirectory(2805)
add_subdirectory(2810)
add_subdirectory(2812)
add_subdirectory(2822)
add_subdirectory(2839)
add_subdirectory(2845)
add_subdirectory(2847)
add_subdirectory(2857)
add_subdirectory(2864)
add_subdirectory(2869)
add_subdirectory(2884)
add_subdirectory(2902)
add_subdirectory(2908)
add_subdirectory(2914)
add_subdirectory(2920)
add_subdirectory(2921)
add_subdirectory(2935)
add_subdirectory(2941)
add_subdirectory(2953)
add_subdirectory(2959)
add_subdirectory(3003)
add_subdirectory(3004)
add_subdirectory(3009)
add_subdirectory(3040)
add_subdirectory(3046)
add_subdirectory(3052)
add_subdirectory(3053)
add_subdirectory(3058)
add_subdirectory(3460)
add_subdirectory(3613)
add_subdirectory(3986)
add_subdirectory(4101)
add_subdirectory(4153)
add_subdirectory(4344)
add_subdirectory(4458)
add_subdirectory(4470)
add_subdirectory(4562)
add_subdirectory(4592)
add_subdirectory(4673)
add_subdirectory(4892)
add_subdirectory(4948)
add_subdirectory(4949)
add_subdirectory(4999)
add_subdirectory(5032)
add_subdirectory(5054)
add_subdirectory(5063)
add_subdirectory(5073)
add_subdirectory(5086)
add_subdirectory(5176)
add_subdirectory(5217)
add_subdirectory(5337)
add_subdirectory(5338)
add_subdirectory(5339)
add_subdirectory(5347)
add_subdirectory(5355)
add_subdirectory(5430)
add_subdirectory(5522)
add_subdirectory(5532)
add_subdirectory(5543)
add_subdirectory(5554)
add_subdirectory(5565)
add_subdirectory(5575)
add_subdirectory(5576)
add_subdirectory(5582)
add_subdirectory(5585)
add_subdirectory(5596)
add_subdirectory(5597)
add_subdirectory(5622)
add_subdirectory(5635)
add_subdirectory(5717)
add_subdirectory(5800)
add_subdirectory(6749)
add_subdirectory(6778)
add_subdirectory(6810)
add_subdirectory(7287)
add_subdirectory(7510)
add_subdirectory(7567)
add_subdirectory(7568)
add_subdirectory(7569)
add_subdirectory(7576)
add_subdirectory(7662)
add_subdirectory(7789)
add_subdirectory(7891)
add_subdirectory(8370)
add_subdirectory(8393)
add_subdirectory(8394)
add_subdirectory(8545)
add_subdirectory(8871)
add_subdirectory(8958)
add_subdirectory(9012)
add_subdirectory(9020)
add_subdirectory(9076)
add_subdirectory(9085)
add_subdirectory(9086)
add_subdirectory(9093)
add_subdirectory(9095)
add_subdirectory(9251)
add_subdirectory(9295)
add_subdirectory(9316)
add_subdirectory(9325)
add_subdirectory(9498)
add_subdirectory(9506)
add_subdirectory(9610)
add_subdirectory(9625)
add_subdirectory(9653)
add_subdirectory(9654)
add_subdirectory(9655)
add_subdirectory(9713)
add_subdirectory(9742)
