#project name 
project(brickjoon_source)


add_executable(baekjoon_1000 1000.cc)
add_executable(baekjoon_1001 1001.cc)
add_executable(baekjoon_1002 1002.cpp)
add_executable(baekjoon_1003 1003.cpp)
add_executable(baekjoon_10039 10039.cc)
add_executable(baekjoon_1004 1004.cpp)
add_executable(baekjoon_1008 1008.cc)
add_executable(baekjoon_1009 1009.cpp)
add_executable(baekjoon_10093 10093.cpp)
add_executable(baekjoon_1010 1010.cpp)
add_executable(baekjoon_10101 10101.cpp)
add_executable(baekjoon_10102 10102.cpp)
add_executable(baekjoon_10103 10103.cpp)
add_executable(baekjoon_1011 1011.cpp)
add_executable(baekjoon_1012 1012.cpp)
add_executable(baekjoon_10156 10156.cpp)
add_executable(baekjoon_10162 10162.cc)
add_executable(baekjoon_10170 10170.cc)
add_executable(baekjoon_10171 10171.cc)
add_executable(baekjoon_10172 10172.cc)
add_executable(baekjoon_10178 10178.cc)
add_executable(baekjoon_1018 1018.cpp)
add_executable(baekjoon_10214 10214.cpp)
add_executable(baekjoon_10250 10250.cpp)
add_executable(baekjoon_1026 1026.cpp)
add_executable(baekjoon_1032 1032.cpp)
add_executable(baekjoon_1037 1037.cpp)
add_executable(baekjoon_10430 10430.cc)
add_executable(baekjoon_1049 1049.cpp)
add_executable(baekjoon_10569 10569.cpp)
add_executable(baekjoon_10610 10610.cpp)
add_executable(baekjoon_1065 1065.cpp)
add_executable(baekjoon_10699 10699.cpp)
add_executable(baekjoon_10707 10707.cpp)
add_executable(baekjoon_10718 10718.cc)
add_executable(baekjoon_1074 1074.cpp)
add_executable(baekjoon_10757 10757.cpp)
add_executable(baekjoon_10768 10768.cpp)
add_executable(baekjoon_10773 10773.cpp)
add_executable(baekjoon_10797 10797.cc)
add_executable(baekjoon_10798 10798.cpp)
add_executable(baekjoon_10799 10799.cpp)
add_executable(baekjoon_10807 10807.cpp)
add_executable(baekjoon_10808 10808.cpp)
add_executable(baekjoon_10809 10809.cc)
add_executable(baekjoon_10814 10814.cpp)
add_executable(baekjoon_10815 10815.cpp)
add_executable(baekjoon_10816 10816.cpp)
add_executable(baekjoon_10817 10817.cc)
add_executable(baekjoon_10818 10818.cc)
add_executable(baekjoon_10820 10820.cpp)
add_executable(baekjoon_10822 10822.cc)
add_executable(baekjoon_10824 10824.cpp)
add_executable(baekjoon_10826 10826.cc)
add_executable(baekjoon_10828 10828.cpp)
add_executable(baekjoon_10833 10833.cc)
add_executable(baekjoon_10845 10845.cpp)
add_executable(baekjoon_1085 1085.cpp)
add_executable(baekjoon_10866 10866.cpp)
add_executable(baekjoon_10867 10867.cpp)
add_executable(baekjoon_10869 10869.cc)
add_executable(baekjoon_10870 10870.cpp)
add_executable(baekjoon_10871 10871.cc)
add_executable(baekjoon_10872 10872.cpp)
add_executable(baekjoon_10886 10886.cpp)
add_executable(baekjoon_10926 10926.cpp)
add_executable(baekjoon_10950 10950.cc)
add_executable(baekjoon_10951 10951.cc)
add_executable(baekjoon_10952 10952.cc)
add_executable(baekjoon_10953 10953.cpp)
add_executable(baekjoon_10974 10974.cpp)
add_executable(baekjoon_10984 10984.cc)
add_executable(baekjoon_10987 10987.cpp)
add_executable(baekjoon_10988 10988.cpp)
add_executable(baekjoon_10989 10989.cpp)
add_executable(baekjoon_10990 10990.cpp)
add_executable(baekjoon_10991 10991.cc)
add_executable(baekjoon_10995 10995.cc)
add_executable(baekjoon_10998 10998.cc)
add_executable(baekjoon_1100 1100.cpp)
add_executable(baekjoon_11021 11021.cc)
add_executable(baekjoon_11022 11022.cc)
add_executable(baekjoon_11034 11034.cpp)
add_executable(baekjoon_11047 11047.cpp)
add_executable(baekjoon_11050 11050.cpp)
add_executable(baekjoon_11098 11098.cc)
add_executable(baekjoon_1110 1110.cpp)
add_executable(baekjoon_1120 1120.cpp)
add_executable(baekjoon_11279 11279.cpp)
add_executable(baekjoon_11286 11286.cpp)
add_executable(baekjoon_11288 11288.cpp)
add_executable(baekjoon_11365 11365.cc)
add_executable(baekjoon_11382 11382.cc)
add_executable(baekjoon_11399 11399.cpp)
add_executable(baekjoon_1149 1149.cpp)
add_executable(baekjoon_1152 1152.cpp)
add_executable(baekjoon_11557 11557.cpp)
add_executable(baekjoon_1157 1157.cc)
add_executable(baekjoon_1158 1158.cc)
add_executable(baekjoon_11582 11582.cpp)
add_executable(baekjoon_11650 11650.cpp)
add_executable(baekjoon_11651 11651.cpp)
add_executable(baekjoon_11653 11653.cpp)
add_executable(baekjoon_11654 11654.cc)
add_executable(baekjoon_11655 11655.cpp)
add_executable(baekjoon_11656 11656.cpp)
add_executable(baekjoon_11659 11659.cpp)
add_executable(baekjoon_11718 11718.cpp)
add_executable(baekjoon_11719 11719.cpp)
add_executable(baekjoon_11720 11720.cc)
add_executable(baekjoon_11721 11721.cpp)
add_executable(baekjoon_11723 11723.cpp)
add_executable(baekjoon_11724 11724.cpp)
add_executable(baekjoon_11726 11726.cpp)
add_executable(baekjoon_11727 11727.cc)
add_executable(baekjoon_11728 11728.cpp)
add_executable(baekjoon_11729 11729.cpp)
add_executable(baekjoon_1181 1181.cpp)
add_executable(baekjoon_11866 11866.cpp)
add_executable(baekjoon_1193 1193.cpp)
add_executable(baekjoon_11931 11931.cpp)
add_executable(baekjoon_11942 11942.cc)
add_executable(baekjoon_11943 11943.cpp)
add_executable(baekjoon_11944 11944.cpp)
add_executable(baekjoon_11945 11945.cc)
add_executable(baekjoon_11948 11948.cpp)
add_executable(baekjoon_11966 11966.cc)
add_executable(baekjoon_1212 1212.cpp)
add_executable(baekjoon_1246 1246.cpp)
add_executable(baekjoon_1259 1259.cpp)
add_executable(baekjoon_1260 1260.cpp)
add_executable(baekjoon_12605 12605.cpp)
add_executable(baekjoon_1264 1264.cc)
add_executable(baekjoon_1267 1267.cpp)
add_executable(baekjoon_1292 1292.cpp)
add_executable(baekjoon_1297 1297.cpp)
add_executable(baekjoon_1302 1302.cpp)
add_executable(baekjoon_1316 1316.cpp)
add_executable(baekjoon_13241 13241.cc)
add_executable(baekjoon_1330 1330.cc)
add_executable(baekjoon_13301 13301.cpp)
add_executable(baekjoon_13305 13305.cpp)
add_executable(baekjoon_1334 1334.cc)
add_executable(baekjoon_13413 13413.cc)
add_executable(baekjoon_1357 1357.cpp)
add_executable(baekjoon_1373 1373.cpp)
add_executable(baekjoon_13752 13752.cc)
add_executable(baekjoon_1408 1408.cc)
add_executable(baekjoon_1417 1417.cpp)
add_executable(baekjoon_1422 1422.cpp)
add_executable(baekjoon_14247 14247.cpp)
add_executable(baekjoon_14264 14264.cpp)
add_executable(baekjoon_1427 1427.cpp)
add_executable(baekjoon_1436 1436.cpp)
add_executable(baekjoon_1439 1439.cpp)
add_executable(baekjoon_1440 1440.cpp)
add_executable(baekjoon_14425 14425.cpp)
add_executable(baekjoon_14469 14469.cpp)
add_executable(baekjoon_14470 14470.cpp)
add_executable(baekjoon_14489 14489.cc)
add_executable(baekjoon_14606 14606.cc)
add_executable(baekjoon_1463 1463.cpp)
add_executable(baekjoon_14645 14645.cc)
add_executable(baekjoon_14652 14652.cpp)
add_executable(baekjoon_14655 14655.cpp)
add_executable(baekjoon_14659 14659.cpp)
add_executable(baekjoon_14681 14681.cc)
add_executable(baekjoon_1476 1476.cpp)
add_executable(baekjoon_14916 14916.cpp)
add_executable(baekjoon_14928 14928.cpp)
add_executable(baekjoon_15312 15312.cpp)
add_executable(baekjoon_15353 15353.cpp)
add_executable(baekjoon_15372 15372.cc)
add_executable(baekjoon_1541 1541.cpp)
add_executable(baekjoon_15439 15439.cpp)
add_executable(baekjoon_1546 1546.cc)
add_executable(baekjoon_1550 1550.cpp)
add_executable(baekjoon_15552 15552.cc)
add_executable(baekjoon_15596 15596.cc)
add_executable(baekjoon_15649 15649.cpp)
add_executable(baekjoon_15650 15650.cpp)
add_executable(baekjoon_15651 15651.cpp)
add_executable(baekjoon_15652 15652.cpp)
add_executable(baekjoon_15654 15654.cpp)
add_executable(baekjoon_15655 15655.cpp)
add_executable(baekjoon_15656 15656.cpp)
add_executable(baekjoon_15657 15657.cc)
add_executable(baekjoon_15680 15680.cpp)
add_executable(baekjoon_15720 15720.cpp)
add_executable(baekjoon_15726 15726.cpp)
add_executable(baekjoon_15727 15727.cc)
add_executable(baekjoon_15733 15733.cc)
add_executable(baekjoon_15740 15740.cpp)
add_executable(baekjoon_15792 15792.cpp)
add_executable(baekjoon_15813 15813.cpp)
add_executable(baekjoon_15829 15829.cpp)
add_executable(baekjoon_15873 15873.cc)
add_executable(baekjoon_15894 15894.cpp)
add_executable(baekjoon_15904 15904.cpp)
add_executable(baekjoon_15917 15917.cpp)
add_executable(baekjoon_15962 15962.cc)
add_executable(baekjoon_15963 15963.cpp)
add_executable(baekjoon_15964 15964.cc)
add_executable(baekjoon_15988 15988.cpp)
add_executable(baekjoon_16170 16170.cc)
add_executable(baekjoon_1620 1620.cpp)
add_executable(baekjoon_1629 1629.cpp)
add_executable(baekjoon_16394 16394.cc)
add_executable(baekjoon_16430 16430.cc)
add_executable(baekjoon_16486 16486.cpp)
add_executable(baekjoon_16496 16496.cpp)
add_executable(baekjoon_1654 1654.cpp)
add_executable(baekjoon_1655 1655.cpp)
add_executable(baekjoon_16561 16561.cpp)
add_executable(baekjoon_1676 1676.cpp)
add_executable(baekjoon_1697 1697.cpp)
add_executable(baekjoon_1712 1712.cpp)
add_executable(baekjoon_1715 1715.cpp)
add_executable(baekjoon_17202 17202.cpp)
add_executable(baekjoon_17224 17224.cpp)
add_executable(baekjoon_17249 17249.cc)
add_executable(baekjoon_17256 17256.cpp)
add_executable(baekjoon_17295 17295.cc)
add_executable(baekjoon_17362 17362.cc)
add_executable(baekjoon_17388 17388.cpp)
add_executable(baekjoon_17496 17496.cc)
add_executable(baekjoon_17608 17608.cpp)
add_executable(baekjoon_1764 1764.cpp)
add_executable(baekjoon_1789 1789.cpp)
add_executable(baekjoon_18096 18096.cc)
add_executable(baekjoon_18108 18108.cc)
add_executable(baekjoon_18111 18111.cpp)
add_executable(baekjoon_1822 1822.cpp)
add_executable(baekjoon_18221 18221.cpp)
add_executable(baekjoon_18258 18258.cpp)
add_executable(baekjoon_18301 18301.cc)
add_executable(baekjoon_18408 18408.cpp)
add_executable(baekjoon_1874 1874.cpp)
add_executable(baekjoon_18870 18870.cpp)
add_executable(baekjoon_18917 18917.cpp)
add_executable(baekjoon_1920 1920.cc)
add_executable(baekjoon_1924 1924.cpp)
add_executable(baekjoon_1927 1927.cpp)
add_executable(baekjoon_1929 1929.cpp)
add_executable(baekjoon_1931 1931.cpp)
add_executable(baekjoon_1934 1934.cpp)
add_executable(baekjoon_1946 1946.cc)
add_executable(baekjoon_1966 1966.cpp)
add_executable(baekjoon_1977 1977.cpp)
add_executable(baekjoon_1978 1978.cpp)
add_executable(baekjoon_19944 19944.cc)
add_executable(baekjoon_2010 2010.cpp)
add_executable(baekjoon_20254 20254.cpp)
add_executable(baekjoon_20301 20301.cpp)
add_executable(baekjoon_20492 20492.cpp)
add_executable(baekjoon_20499 20499.cc)
add_executable(baekjoon_2108 2108.cpp)
add_executable(baekjoon_21300 21300.cpp)
add_executable(baekjoon_2154 2154.cc)
add_executable(baekjoon_2161 2161.cpp)
add_executable(baekjoon_2163 2163.cpp)
add_executable(baekjoon_2164 2164.cpp)
add_executable(baekjoon_2178 2178.cpp)
add_executable(baekjoon_21964 21964.cpp)
add_executable(baekjoon_22015 22015.cc)
add_executable(baekjoon_2217 2217.cpp)
add_executable(baekjoon_2231 2231.cpp)
add_executable(baekjoon_2292 2292.cc)
add_executable(baekjoon_22966 22966.cpp)
add_executable(baekjoon_23037 23037.cc)
add_executable(baekjoon_2309 2309.cpp)
add_executable(baekjoon_23234 23234.cc)
add_executable(baekjoon_23253 23253.cpp)
add_executable(baekjoon_2355 2355.cpp)
add_executable(baekjoon_23738 23738.cpp)
add_executable(baekjoon_23795 23795.cc)
add_executable(baekjoon_23825 23825.cc)
add_executable(baekjoon_24039 24039.cpp)
add_executable(baekjoon_24075 24075.cc)
add_executable(baekjoon_24078 24078.cpp)
add_executable(baekjoon_24082 24082.cpp)
add_executable(baekjoon_24083 24083.cpp)
add_executable(baekjoon_24086 24086.cpp)
add_executable(baekjoon_2417 2417.cpp)
add_executable(baekjoon_2420 2420.cpp)
add_executable(baekjoon_24262 24262.cpp)
add_executable(baekjoon_24263 24263.cpp)
add_executable(baekjoon_24264 24264.cpp)
add_executable(baekjoon_24265 24265.cpp)
add_executable(baekjoon_24266 24266.cpp)
add_executable(baekjoon_24267 24267.cpp)
add_executable(baekjoon_24365 24365.cpp)
add_executable(baekjoon_2438 2438.cc)
add_executable(baekjoon_2439 2439.cc)
add_executable(baekjoon_2440 2440.cc)
add_executable(baekjoon_2441 2441.cc)
add_executable(baekjoon_24416 24416.cpp)
add_executable(baekjoon_2442 2442.cpp)
add_executable(baekjoon_2443 2443.cpp)
add_executable(baekjoon_2444 2444.cpp)
add_executable(baekjoon_2445 2445.cpp)
add_executable(baekjoon_2446 2446.cc)
add_executable(baekjoon_2447 2447.cpp)
add_executable(baekjoon_24498 24498.cpp)
add_executable(baekjoon_24509 24509.cc)
add_executable(baekjoon_24510 24510.cc)
add_executable(baekjoon_2455 2455.cpp)
add_executable(baekjoon_24568 24568.cc)
add_executable(baekjoon_2460 2460.cpp)
add_executable(baekjoon_24736 24736.cc)
add_executable(baekjoon_2475 2475.cc)
add_executable(baekjoon_2476 2476.cpp)
add_executable(baekjoon_2480 2480.cpp)
add_executable(baekjoon_24860 24860.cc)
add_executable(baekjoon_24883 24883.cc)
add_executable(baekjoon_2490 2490.cpp)
add_executable(baekjoon_24900 24900.cc)
add_executable(baekjoon_2491 2491.cpp)
add_executable(baekjoon_2501 2501.cc)
add_executable(baekjoon_2506 2506.cpp)
add_executable(baekjoon_25083 25083.cc)
add_executable(baekjoon_2522 2522.cpp)
add_executable(baekjoon_2523 2523.cpp)
add_executable(baekjoon_25238 25238.cc)
add_executable(baekjoon_2525 2525.cpp)
add_executable(baekjoon_2530 2530.cpp)
add_executable(baekjoon_25304 25304.cc)
add_executable(baekjoon_25311 25311.cc)
add_executable(baekjoon_25314 25314.cc)
add_executable(baekjoon_25372 25372.cc)
add_executable(baekjoon_2557 2557.cc)
add_executable(baekjoon_2558 2558.cc)
add_executable(baekjoon_2562 2562.cc)
add_executable(baekjoon_25628 25628.cc)
add_executable(baekjoon_2566 2566.cpp)
add_executable(baekjoon_25703 25703.cc)
add_executable(baekjoon_2576 2576.cc)
add_executable(baekjoon_2577 2577.cpp)
add_executable(baekjoon_2579 2579.cpp)
add_executable(baekjoon_2581 2581.cpp)
add_executable(baekjoon_2587 2587.cpp)
add_executable(baekjoon_2588 2588.cc)
add_executable(baekjoon_2592 2592.cpp)
add_executable(baekjoon_2605 2605.cpp)
add_executable(baekjoon_2606 2606.cpp)
add_executable(baekjoon_2607 2607.cpp)
add_executable(baekjoon_2609 2609.cpp)
add_executable(baekjoon_2630 2630.cpp)
add_executable(baekjoon_2667 2667.cpp)
add_executable(baekjoon_2675 2675.cc)
add_executable(baekjoon_2693 2693.cc)
add_executable(baekjoon_2696 2696.cpp)
add_executable(baekjoon_2711 2711.cpp)
add_executable(baekjoon_2720 2720.cpp)
add_executable(baekjoon_2738 2738.cc)
add_executable(baekjoon_2739 2739.cc)
add_executable(baekjoon_2741 2741.cc)
add_executable(baekjoon_2742 2742.cc)
add_executable(baekjoon_2743 2743.cpp)
add_executable(baekjoon_2744 2744.cpp)
add_executable(baekjoon_2747 2747.cpp)
add_executable(baekjoon_2748 2748.cpp)
add_executable(baekjoon_2749 2749.cpp)
add_executable(baekjoon_2750 2750.cpp)
add_executable(baekjoon_2751 2751.cpp)
add_executable(baekjoon_2752 2752.cc)
add_executable(baekjoon_2753 2753.cc)
add_executable(baekjoon_2754 2754.cpp)
add_executable(baekjoon_2775 2775.cpp)
add_executable(baekjoon_2798 2798.cpp)
add_executable(baekjoon_2805 2805.cpp)
add_executable(baekjoon_2810 2810.cpp)
add_executable(baekjoon_2812 2812.cc)
add_executable(baekjoon_2822 2822.cpp)
add_executable(baekjoon_2839 2839.cpp)
add_executable(baekjoon_2845 2845.cpp)
add_executable(baekjoon_2847 2847.cpp)
add_executable(baekjoon_2857 2857.cc)
add_executable(baekjoon_2864 2864.cpp)
add_executable(baekjoon_2869 2869.cpp)
add_executable(baekjoon_2884 2884.cc)
add_executable(baekjoon_2902 2902.cpp)
add_executable(baekjoon_2908 2908.cc)
add_executable(baekjoon_2914 2914.cc)
add_executable(baekjoon_2920 2920.cc)
add_executable(baekjoon_2921 2921.cpp)
add_executable(baekjoon_2935 2935.cpp)
add_executable(baekjoon_2941 2941.cc)
add_executable(baekjoon_2953 2953.cpp)
add_executable(baekjoon_2959 2959.cpp)
add_executable(baekjoon_3003 3003.cc)
add_executable(baekjoon_3004 3004.cpp)
add_executable(baekjoon_3009 3009.cpp)
add_executable(baekjoon_3040 3040.cc)
add_executable(baekjoon_3046 3046.cc)
add_executable(baekjoon_3052 3052.cc)
add_executable(baekjoon_3053 3053.cpp)
add_executable(baekjoon_3058 3058.cpp)
add_executable(baekjoon_3460 3460.cpp)
add_executable(baekjoon_3613 3613.cpp)
add_executable(baekjoon_3986 3986.cpp)
add_executable(baekjoon_4101 4101.cpp)
add_executable(baekjoon_4153 4153.cpp)
add_executable(baekjoon_4344 4344.cpp)
add_executable(baekjoon_4458 4458.cpp)
add_executable(baekjoon_4470 4470.cc)
add_executable(baekjoon_4562 4562.cc)
add_executable(baekjoon_4592 4592.cpp)
add_executable(baekjoon_4673 4673.cpp)
add_executable(baekjoon_4892 4892.cc)
add_executable(baekjoon_4948 4948.cpp)
add_executable(baekjoon_4949 4949.cpp)
add_executable(baekjoon_4999 4999.cpp)
add_executable(baekjoon_5032 5032.cpp)
add_executable(baekjoon_5054 5054.cc)
add_executable(baekjoon_5063 5063.cpp)
add_executable(baekjoon_5073 5073.cpp)
add_executable(baekjoon_5086 5086.cpp)
add_executable(baekjoon_5176 5176.cpp)
add_executable(baekjoon_5217 5217.cc)
add_executable(baekjoon_5337 5337.cc)
add_executable(baekjoon_5338 5338.cc)
add_executable(baekjoon_5339 5339.cc)
add_executable(baekjoon_5347 5347.cpp)
add_executable(baekjoon_5355 5355.cpp)
add_executable(baekjoon_5430 5430.cpp)
add_executable(baekjoon_5522 5522.cpp)
add_executable(baekjoon_5532 5532.cpp)
add_executable(baekjoon_5543 5543.cc)
add_executable(baekjoon_5554 5554.cc)
add_executable(baekjoon_5565 5565.cpp)
add_executable(baekjoon_5575 5575.cpp)
add_executable(baekjoon_5576 5576.cpp)
add_executable(baekjoon_5582 5582.cpp)
add_executable(baekjoon_5585 5585.cpp)
add_executable(baekjoon_5596 5596.cc)
add_executable(baekjoon_5597 5597.cc)
add_executable(baekjoon_5622 5622.cpp)
add_executable(baekjoon_5635 5635.cpp)
add_executable(baekjoon_5717 5717.cpp)
add_executable(baekjoon_5800 5800.cc)
add_executable(baekjoon_6749 6749.cc)
add_executable(baekjoon_6778 6778.cc)
add_executable(baekjoon_6810 6810.cc)
add_executable(baekjoon_7287 7287.cc)
add_executable(baekjoon_7510 7510.cpp)
add_executable(baekjoon_7567 7567.cpp)
add_executable(baekjoon_7568 7568.cpp)
add_executable(baekjoon_7569 7569.cpp)
add_executable(baekjoon_7576 7576.cpp)
add_executable(baekjoon_7662 7662.cpp)
add_executable(baekjoon_7789 7789.cc)
add_executable(baekjoon_7891 7891.cc)
add_executable(baekjoon_8370 8370.cc)
add_executable(baekjoon_8393 8393.cc)
add_executable(baekjoon_8394 8394.cpp)
add_executable(baekjoon_8545 8545.cc)
add_executable(baekjoon_8871 8871.cc)
add_executable(baekjoon_8958 8958.cc)
add_executable(baekjoon_9012 9012.cpp)
add_executable(baekjoon_9020 9020.cpp)
add_executable(baekjoon_9076 9076.cpp)
add_executable(baekjoon_9085 9085.cpp)
add_executable(baekjoon_9086 9086.cpp)
add_executable(baekjoon_9093 9093.cpp)
add_executable(baekjoon_9095 9095.cpp)
add_executable(baekjoon_9251 9251.cpp)
add_executable(baekjoon_9295 9295.cpp)
add_executable(baekjoon_9316 9316.cpp)
add_executable(baekjoon_9325 9325.cpp)
add_executable(baekjoon_9498 9498.cc)
add_executable(baekjoon_9506 9506.cpp)
add_executable(baekjoon_9610 9610.cpp)
add_executable(baekjoon_9625 9625.cpp)
add_executable(baekjoon_9653 9653.cpp)
add_executable(baekjoon_9654 9654.cc)
add_executable(baekjoon_9655 9655.cc)
add_executable(baekjoon_9713 9713.cc)
add_executable(baekjoon_9742 9742.cpp)
